--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- favicon link -->
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 
   <!-- icons link:  -->
   <script src="https://kit.fontawesome.com/857ac82fd2.js" crossorigin="anonymous"></script>
