final changes to publish the site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>CASED</title>
 
   <!-- CSS only -->
@@ -131,7 +133,7 @@
 
   <section class="press">
 
-    <img class="press-logo" src="techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="TechCrunch.png" alt="tc-logo">
 
     <img class="press-logo" src="tnw.png" alt="tnw-logo">
 
