--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=true">
   <title>CASED</title>
 
   <!-- CSS only -->
@@ -74,17 +74,17 @@
     <div class="row">
       <div class="feature-box col-lg-4">
         <i class="fa-regular fa-circle-check fa-4x icons"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="h3">Easy to use.</h3>
         <p>Very Basic and simple. </p>
       </div>
       <div class="feature-box col-lg-4">
         <i class="fa-solid fa-bullseye fa-4x icons"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="h3">Elite Clientele</h3>
         <p>We have all the types of covers and cases, fullfilling your every requirement.</p>
       </div>
       <div class="feature-box col-lg-4">
         <i class="fa-sharp fa-solid fa-heart fa-4x icons"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="h3">Guaranteed to work.</h3>
         <p>Find the best suited case for you in no time.</p>
       </div>
     </div>
@@ -99,18 +99,18 @@
     <div id="testimonial-carousel" class="carousel slide" data-ride="false" data-bs-touch="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to worry about the safety of my device. I've found the best covers to secure my phone on CASED.</h2>
+          <h2 class="h2">I no longer have to worry about the safety of my device. I've found the best covers to secure my phone on CASED.</h2>
           <img class="testimonial-img" src="pebbles.jpg" alt="pebbles-pic">
           <em>Pebbles, New York</em>
 
         </div>
         <div class="carousel-item">
-          <h2>My phone always looked dull and basic but after buying the perfect case it made it look great and colorful.</h2>
+          <h2 class="h2">My phone always looked dull and basic but after buying the perfect case it made it look great and colorful.</h2>
           <img class="testimonial-img" src="peter.jpg" alt="peter-pic">
           <em>Peter, London</em>
         </div>
         <div class="carousel-item">
-          <h2>The mobile covers here are the best , I bought a case long time ago and it still looks the same as when i bought it.</h2>
+          <h2 class="h2">The mobile covers here are the best , I bought a case long time ago and it still looks the same as when i bought it.</h2>
           <img class="testimonial-img" src="shwait.jpg" alt="shwait-pic">
           <em>Shwait, India</em>
         </div>
@@ -151,16 +151,16 @@
 
   <section class="pricing">
 
-    <h2>A Plan for Your Needs</h2>
+    <h2 class="h2">A Plan for Your Needs</h2>
     <p>Simple and affordable price plans for your and your device.</p>
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Basic Case</h3>
+            <h3 class="h3">Basic Case</h3>
           </div>
           <div class="card body">
-            <h2>$0.99</h2>
+            <h2 class="h2">$0.99</h2>
             <p>Basic Listing</p>
             <p>Buy one for $0.99</p>
             <p>Buy two for $1.49</p>
@@ -172,11 +172,11 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Glass case</h3>
+            <h3 class="h3">Glass case</h3>
           </div>
           <div class="card body">
 
-            <h2>$1.99</h2>
+            <h2 class="h2">$1.99</h2>
             <p>Best Listing</p>
             <p>Buy one for $1.99</p>
             <p>Buy two for $2.99</p>
@@ -189,10 +189,10 @@
         <div class="card">
           <div class="card-header">
 
-            <h3>Platinum Case</h3>
+            <h3 class="h3">Platinum Case</h3>
           </div>
           <div class="card body">
-            <h2>$4.99</h2>
+            <h2 class="h2">$4.99</h2>
             <p>Pirority Listing</p>
             <p>Buy one for $4.99</p>
             <p>Buy two for $8.99</p>
@@ -211,7 +211,7 @@
 
     <section class="cta">
           <h1 class="big-heading">Find the Best Phone Case for your Device Today.</h1>
-          <h2>Exciting deals availabe for now! BUY NOW.</h3>
+          <h2  class="h2">Exciting deals availabe for now! BUY NOW.</h3>
             <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
             <button type="button" class="btn btn-light btn-lg download-button"> <i class="fa-brands fa-google-play"></i> Download</button>
     </section>
