--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link" href="#prices">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="signin.html">Download</a>
+              <a class="nav-link" href="signin.html">Sign In</a>
             </li>
           </ul>
         </div>
