added cart and contact us webpage link and changes background clr

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <!-- icons link:  -->
   <script src="https://kit.fontawesome.com/857ac82fd2.js" crossorigin="anonymous"></script>
 
+  <!-- lineicons link -->
+  <link rel="stylesheet" href="https://cdn.lineicons.com/3.0/lineicons.css">
+
 </head>
 
 <body>
@@ -35,7 +38,7 @@
       <!-- navigation bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">~CASED</a>
+        <a class="navbar-brand" href="index.html">~CASED</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,13 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#contacts">Contacts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#prices">Pricing</a>
+              <a class="nav-link" href="contact.html">Contacts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="signin.html">Sign In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cart.html">Cart <i class="lni lni-cart"></i></a>
             </li>
           </ul>
         </div>
@@ -59,7 +62,7 @@
         <div class="col-lg-6">
           <h1 class="big-heading">Buy Stylish Mobile Covers and Cases at awesome prices.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fa-brands fa-google-play"></i> Download</button>
+          <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6 rotated">
           <img class="title-image" src="casepic.png" alt="case-pic">
@@ -124,12 +127,9 @@
 
       </button>
     </div>
-
-
-
-
-
   </section>
+
+  <!-- press -->
 
   <section class="press">
 
@@ -145,9 +145,6 @@
 
 
   <!-- Pricing -->
-  <section id="prices">
-
-  </section>
 
   <section class="pricing">
 
@@ -156,16 +153,18 @@
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
+
           <div class="card-header">
             <h3 class="h3">Basic Case</h3>
           </div>
           <div class="card body">
+            <img src="Basic-Case1.jpg" class="card-img-top" alt="Basic-Case1">
             <h2 class="h2">$0.99</h2>
             <p>Basic Listing</p>
             <p>Buy one for $0.99</p>
             <p>Buy two for $1.49</p>
             <p>Buy three for $1.99</p>
-            <button type="button" class="btn btn-lg btn-outline-dark">Buy Now</button>
+            <button type="button" class="btn btn-lg btn-dark"><a class="cart-link" href="cart.html">Buy Now</a></button>
           </div>
         </div>
       </div>
@@ -175,7 +174,7 @@
             <h3 class="h3">Glass case</h3>
           </div>
           <div class="card body">
-
+            <img src="Glass-Case1.jpg" class="card-img-top" alt="Glass-Case1">
             <h2 class="h2">$1.99</h2>
             <p>Best Listing</p>
             <p>Buy one for $1.99</p>
@@ -188,10 +187,10 @@
       <div class="pricing-column col-lg-4 ">
         <div class="card">
           <div class="card-header">
-
             <h3 class="h3">Platinum Case</h3>
           </div>
           <div class="card body">
+            <img src="Platinum-Case1.jpg" class="card-img-top" alt="Platinum-Case1">
             <h2 class="h2">$4.99</h2>
             <p>Pirority Listing</p>
             <p>Buy one for $4.99</p>
@@ -210,10 +209,10 @@
   <section id="downloads">
 
     <section class="cta">
-          <h1 class="big-heading">Find the Best Phone Case for your Device Today.</h1>
-          <h2  class="h2">Exciting deals availabe for now! BUY NOW.</h3>
-            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
-            <button type="button" class="btn btn-light btn-lg download-button"> <i class="fa-brands fa-google-play"></i> Download</button>
+      <h1 class="big-heading">Find the Best Phone Case for your Device Today.</h1>
+      <h2 class="h2">Exciting deals available for now! BUY NOW.</h3>
+        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-light btn-lg download-button"> <i class="fa-brands fa-google-play"></i> Download</button>
     </section>
 
   </section>
