--- a/signin.html
+++ b/signin.html
@@ -1,38 +1,96 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <!-- CSS -->
-    <link rel="stylesheet" href="signin.css">
 
-    <!-- favicon link -->
-    <link rel="icon" href="favicon.ico">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>CASED Sign in</title>
-  </head>
-  <body>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+  <!-- font link:  -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Anton&&display=swap" rel="stylesheet">
+
+  <!-- favicon link -->
+  <link rel="icon" href="favicon.ico">
+
+  <!-- icons link:  -->
+  <script src="https://kit.fontawesome.com/857ac82fd2.js" crossorigin="anonymous"></script>
+
+  <!-- lineicons link -->
+  <link rel="stylesheet" href="https://cdn.lineicons.com/3.0/lineicons.css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="signin.css">
+
+  <title>CASED Sign in</title>
+</head>
+
+<body>
+  <!-- navigation bar -->
+  <div class="navigation-bar">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="index.html">~CASED</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contacts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="signin.html">Sign In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cart.html"><i class="lni lni-cart"></i></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <div class="container">
     <div class="box">
-       <div class="form">
-         <h2>Sign in</h2>
-         <div class="inputBox">
+      <div class="form">
+        <h2>Sign in</h2>
+        <div class="inputBox">
           <input type="text" required="required">
           <span>Username</span>
           <i></i>
-         </div>
-         <div class="inputBox">
+        </div>
+        <div class="inputBox">
           <input type="password" required="required">
           <span>Password</span>
-         <i></i>
-         </div>
-         <div class="links">
+          <i></i>
+        </div>
+        <div class="links">
           <a href="#">Forgot Password</a>
           <a href="#">Signup</a>
-         </div>
-         <input type="submit" value="Login">
-       </div>
-
+        </div>
+        <input type="submit" value="Login">
+      </div>
     </div>
+  </div>
+  <!-- Footer -->
 
-  </body>
+  <footer class="footer">
+    <section id="contacts">
+      <a class="footer-link" href="https://mobile.twitter.com/amulya61465545"><i class="footer-icons fa-brands fa-twitter fa-2x"></i></a>
+      <a class="footer-link" href="https://www.instagram.com/amulya_machhan_/?hl=en"><i class="footer-icons fa-brands fa-square-instagram fa-2x"></i></a>
+      <a class="footer-link" href="https://www.facebook.com/amulyamachhan.amulyamachhan."><i class="footer-icons fa-brands fa-facebook fa-2x"></i></a>
+      <a class="footer-link" href="https://mail.google.com/"><i class="footer-icons fa-solid fa-envelope fa-2x"></i></a>
+
+      <p>© Copyright 2022 CASED</p>
+    </section>
+  </footer>
+
+</body>
+
 </html>
