--- a/signin.html
+++ b/signin.html
@@ -72,7 +72,7 @@
         </div>
         <div class="links">
           <a href="#">Forgot Password</a>
-          <a href="#">Signup</a>
+          <a href="sign-up.html">Signup</a>
         </div>
         <input type="submit" value="Login">
       </div>
